--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -291,3 +291,46 @@
   year={2002},
   publisher={Wolfram media Champaign, IL}
 }
+
+@book{holldobler1994journey,
+  title={Journey to the ants: a story of scientific exploration.},
+  author={H{\"o}lldobler, Bert and Wilson, Edward O and others},
+  year={1994},
+  publisher={Harvard University Press}
+}
+
+@book{bak2013nature,
+  title={How nature works: the science of self-organized criticality},
+  author={Bak, Per},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{kuurka1997languages,
+  title={Languages, equicontinuity and attractors in cellular automata},
+  author={K{\r{u}}rka, Petr},
+  journal={Ergodic theory and dynamical systems},
+  volume={17},
+  number={2},
+  pages={417--433},
+  year={1997},
+  publisher={Cambridge University Press}
+}
+
+@article{kari1994reversibility,
+  title={Reversibility and surjectivity problems of cellular automata},
+  author={Kari, Jarkko},
+  journal={Journal of Computer and System Sciences},
+  volume={48},
+  number={1},
+  pages={149--182},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@article{ganguly2003survey,
+  title={A survey on cellular automata},
+  author={Ganguly, Niloy and Sikdar, Biplab K and Deutsch, Andreas and Canright, Geoffrey and Chaudhuri, P Pal},
+  year={2003},
+  publisher={Citeseer}
+}
