--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -334,3 +334,19 @@
   year={2003},
   publisher={Citeseer}
 }
+
+@book{alonso2011discrete,
+  title={Discrete systems with memory},
+  author={Alonso-Sanz, Ramon},
+  volume={75},
+  year={2011},
+  publisher={World Scientific}
+}
+
+@book{adamatzky2016designing,
+  title={Designing beauty: The art of cellular automata},
+  author={Adamatzky, Andrew and Mart{\'{i}}nez, Genaro J},
+  volume={20},
+  year={2016},
+  publisher={Springer}
+}
