--- a/THESIS/04-results.Rmd
+++ b/THESIS/04-results.Rmd
@@ -1,4 +1,47 @@
-# Results and Disscusion
+# Results
+
+## Materials and Methods
+
+Here is everything to replicate the experiments
+What exactly did I do?
+
+### Environment
+
+A general tool for creating RL tasks was design. The tool generates environments based on the forest fire CA, specifically the Drossel and Schwabl model (DSM) [@drossel1992self]. The basic idea is to have an agent on top of the CA lattice. The agent has its own state and parameters. Particularly it has an specified postion at one of the nodes of the CA, where it can act by changing the cell on that postion to another of its cell states. The agent navigates the CA changing cells states. When the agent reads its next instruction it moves to a new cell (or stays in place) and then affects, if applicable, the destination. After some agent movements the CA is updated and the full process is repeated.
+
+The ability of allowing an agent to change the CA configurations express the attempt to drive the CA to a desired global state. In the RL framework this is done by giving a reward to the agent at each emited action. This was done by mere counting all cell states indicating unwanted behavior and multiplying by some weight (usually negative). This was generalized into getting the frecuency of any cell type and then multipliying by a weight to generate a score per cell type. Then all the scores were combined into a global score. In summary the used reward function was the dot product of the cell-states frecuencies by some weights, with the semantics that weights for desirable states are greater than the unwanted ones.
+
+The particular environment that was used for this thesis is as follows: A DSM on a lattice of 3x3 with the parameters $p=0.33$ and $f=0.066$ 
+
+
+### Preprocessing
+
+
+
+### Code Availability
+
+The source code for this thesis is openly available at:
+
+1. https://github.com/elbecerrasoto/gym-forest-fire for the RL environments.
+2. https://github.com/elbecerrasoto/CARL for the DQN implementations.
+
+### Model Architecture
+
+### Training Details
+
+### Evaluation Procedure
+
+
+## Results and Disscusion
+
+1. Profiling phase
+
+
+
+
+
+
+
 
 The idea and contributions of the dissertation.
 
@@ -18,19 +61,35 @@ CA models can be used as benchmarks for DRL algorithms that are closer to practi
 than many current benchmarks based on video games.
 
 
-
-## Forest Fire Implementation
-
+## Results and Disscusion
 
 
-## Deep Q-Networks Implementation
 
-## Results
 
-### Training Diagrams
-### Comparative Table
+## Apendix X: Algorithms
 
-## Disscusion
+### Algorithm 1
+Just a sample algorithmn
+\begin{algorithm}[H]
+\DontPrintSemicolon
+\SetAlgoLined
+\KwResult{Write here the result}
+\SetKwInOut{Input}{Input}\SetKwInOut{Output}{Output}
+\Input{Write here the input}
+\Output{Write here the output}
+\BlankLine
+\While{While condition}{
+    instructions\;
+    \eIf{condition}{
+        instructions1\;
+        instructions2\;
+    }{
+        instructions3\;
+    }
+}
+\caption{While loop with If/Else condition}
+\end{algorithm} 
 
-### Unsupervised
+
+
 
